[tool.poetry]
name = "poetry-click"
version = "0.1.0"
description = ""
authors = ["adriennefranke <18449966+adriennefranke@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
