[tool.poetry]
name = "poetry-click"
version = "0.1.0"
description = ""
authors = ["adriennefranke <18449966+adriennefranke@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
click = "^7.1.2"
pandas = "^1.0.5"
Pygments = "^2.6.1"
nox = "^2020.5.24"
requests-mock = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
